--- a/styles/style.css
+++ b/styles/style.css
@@ -9,13 +9,16 @@
   padding: 0;
   font-family: 'Poppins', sans-serif;
 }
+.container{
+  width: 90%;
+  margin: auto;
+}
 
 /* ------------------
 header section
 ------------------ */
 .header-body{
-  width: 1200px;
-
+  width: 90%;
   background-color: #161616;
   border-radius: 30px;
   margin: auto;
@@ -23,17 +26,18 @@ header section
 .header-wrap{
   display: flex;
   margin-top: 30px;
+  margin-bottom: 130px;
 }
 .header-info{
   width: 50%;
-  padding: 120px 0px 100px 100px;
+  padding: 111px 0px 111px 106px;
 }
 .header-info img{
   width: 100%;
 }
 .header-info h1{
   font-weight: 700;
-  font-size: 55px;
+  font-size: 4vw;
   color: white;
   width: 460px;
   line-height: 70px;
@@ -42,7 +46,7 @@ header section
   color: rgba(255, 255, 255, 0.789);
   font-size: 16px;
   padding: 15px 0px;
-  width: 480px;
+  width: 89%;
 }
 .header-info a{
   text-decoration: none;
@@ -66,3 +70,184 @@ i.fa-solid.fa-angle-right {
   height: 100%;
 }
 
+/* ---------------
+nav section 
+-----------------*/
+.main-wrap{
+  display: flex;
+  justify-content: space-between;
+}
+nav{
+  width: 270px;
+  height: 270px;
+  background-color: #161616;
+  border-radius: 10px;
+  margin-right: 24px;
+}
+nav ul{
+  margin-top: 18px;
+}
+nav ul li{
+  list-style: none;
+  padding: 10px;
+}
+nav li a{
+  display: block;
+  text-align: center;
+  text-decoration: none;
+  background-color: white;
+  color: black;
+  width: 205px;
+  height: 40px;
+  margin: auto;
+  border-radius: 7px;
+  font-size: 18px;
+  font-weight: 500;
+  padding-top: 15px;
+}
+.active{
+  background-color: #DD0000;
+  color: white;
+}
+
+/* blog section */
+.blog-section, .match-schedule-section{
+  width: 75%;
+  justify-content: space-between;
+}
+.blog-container, .match-container{
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 24px;
+  margin-bottom: 130px;
+}
+.single-blog, .single-match{
+  border: 1px solid #16161617;
+  border-radius: 10px;
+  width: 100%;
+}
+.blog-img img{
+  width: 100%;
+  height: 175px;
+}
+.blog-info {
+  padding: 18px;
+}
+.blog-info a{
+  width: 80px;
+  height: 25px;
+  border: 1px solid #161616;
+  color: #161616;
+  text-decoration: none;
+  font-size: 16px;
+  padding: 6px 15px;
+  text-align: center;
+  border-radius: 5px;
+  margin-bottom: 10px;
+  display: block;
+}
+.blog-info h4{
+  font-size: 18px;
+  font-weight: 600;
+  margin-bottom: 13px;
+}
+.blog-watch-time {
+  display: flex;
+  align-items: center;
+  color: rgba(22, 22, 22, 0.7);
+    font-size: 15px;
+}
+.blog-watch-time p{
+  margin-right: 20px;
+}
+.blog-watch-time i{
+  margin-right: 10px;
+}
+
+/* match css */
+.match-flag {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 53px 20px 20px;
+}
+.match-info {
+  text-align: center;
+}
+.match-info h1 {
+  font-size: 20px;
+  font-weight: 600;
+}
+.match-info p{
+  font-size: 16px;
+  font-weight: 400;
+  margin-top: 10px;
+  margin-bottom: 53px;
+}
+/* --------------------
+footer
+----------------------- */
+footer{
+  background-color: #161616;
+}
+.footer-wrap{
+  text-align: center;
+  margin: auto;
+}
+.footer-wrap h1{
+  color: white;
+  font-size: 40px;
+  font-weight: 600;
+}
+.footer-title{
+  margin-top: 130px;
+  margin-bottom: 30px;
+  display: inline-block;
+}
+hr{
+  border: none;
+  background-color: rgba(255, 255, 255, 0.1);
+  width: 1050px;
+  margin: auto;
+  height: 1px;
+}
+.social-link a{
+  text-decoration: none;
+  margin-right: 10px;
+  padding: 40px 20px;
+  display: inline-block;
+  font-size: 14px;
+  color: #B9B9B9;
+  font-weight: 500;
+}
+.social-link a:hover{
+  color: white;
+}
+
+
+/* responsive @media */
+@media screen and (max-width: 768px) and (min-width: 480px) {
+  body {
+    background-color: red;
+  }
+
+  .header-body {
+    height: 398px;
+  }
+
+  .header-info {
+    width: 50%;
+    padding: 60px 0px 0px 65px;
+  }
+
+  .header-info h1 {
+    font-size: 35px;
+    line-height: 0px;
+    width: 100%;
+  }
+
+  .header-info p {
+    font-size: 14px;
+  }
+}
