--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -84,7 +84,7 @@
     font-size: 20px;
   }
 }
-@media screen and (max-width: 510px) and (min-width: 320px) {
+@media screen and (max-width: 509px) and (min-width: 320px) {
   header.header-body {
       width: 90%;
     }
@@ -126,13 +126,11 @@
       display: block;
     }
     nav{
-      width: 0;
-    
+      width: 100%;
+      margin: auto;
       background-color: white;
     }
-    nav ul li{
-      margin-left: 105px;
-    }
+   
     nav ul li a {
       border: 1px solid #00000021;
       
@@ -152,6 +150,9 @@
     .social-link a{
       width: 100%;
     }
+        .match-flag{
+          padding: 51px 70px 35px;
+        }
     hr{
       width: 400px;
       margin-bottom: 30px;
