--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,21 @@
   margin: auto;
 }
 
+/*-----------------
+  animation
+---------------- */
+@keyframes zoomInOut {
+
+  0%,
+  100% {
+    transform: scale(1);
+  }
+
+  50% {
+    transform: scale(1.1)
+  }
+}
+
 /* ------------------
 header section
 ------------------ */
@@ -56,20 +71,32 @@ header.header-body {
 }
 .header-info a{
   text-decoration: none;
-  padding: 10px 20px;
+  padding: 15px 20px;
   background-color: red;
   color: white;
-  font-size: 15px;
+  font-size: 1.2rem;
   border-radius: 5px;
   margin: 16px 0;
   display: inline-block;
+  text-transform: uppercase;
+  transition: .5s;
+  position: relative;
 }
+.header-info a:hover{
+
+  color: aqua;
+}
+
+
+
 i.fa-solid.fa-angle-right {
   margin-left: 5px;
 }
 .header-img{
   width: 50%;
   padding-top: 20px;
+  animation: zoomInOut 8s ease infinite;
+
 }
 .header-img img{
   width: 85%;
@@ -113,6 +140,11 @@ nav li a{
   font-size: 18px;
   font-weight: 500;
   padding-top: 15px;
+  transition: .3s ease;
+}
+nav li a:hover{
+  color: white;
+  background-color: #DD0000;
 }
 .active{
   background-color: #DD0000;
@@ -240,3 +272,5 @@ hr{
   display: none;
   overflow: hidden;
 }
+
+
